# k8s-gpu-baseline

./: .env.example  .gitignore  .pre-commit-config.yaml  ACCEPTANCE.md  LICENSE  Makefile  README.md  SETUP.md  helmfile.yaml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
dashboards/: dcgm-overview.json
java/: build.gradle  settings.gradle
kustomize/base/: kustomization.yaml  namespace.yaml
kustomize/overlays/dev/: controller-annotations.yaml  ingress-class-patch.yaml  kustomization.yaml  metrics-server-patch.yaml
kustomize/overlays/prod/: ingress-pdb.yaml  kustomization.yaml  metrics-pdb.yaml  metrics-server-patch.yaml  resource-tweaks.yaml
manifests/: dcgm-exporter.yaml  ingress-nginx.yaml  metrics-server.yaml  node-feature-discovery.yaml  nvidia-device-plugin.yaml
manifests/networkpolicies/: allow-dns-egress.yaml  allow-egress-core.yaml  allow-monitoring.yaml  default-deny-all.yaml  kustomization.yaml
manifests/networkpolicies/allow-egress-core/: allow-egress-core.yaml
manifests/networkpolicies/allow-egress-core/gpu-metrics/: kustomization.yaml
manifests/networkpolicies/allow-egress-core/ingress-nginx/: kustomization.yaml
scripts/: smoke-test.sh
scripts/tools/: bootstrap.ps1  bootstrap.sh
src/ibmi_ops/: __init__.py  cli.py  config.py
src/ibmi_ops/ibmi/: __init__.py  commands.py  connection.py  data_io.py  qsyslib.py
src/ibmi_ops/pipelines/: __init__.py  payroll.py  payroll_utils.py  sample_job.py
tests/integration/: test_placeholder.py
tests/unit/: test_cli.py
tools/kind/: cluster.yaml  gen-config.sh
(+3 files in other folders)
