[project]
name = "ibmi-ops-suite"
version = "0.1.0"
description = "Automation toolkit for IBM i operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ACME"}]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
